--- a/portfolio.html
+++ b/portfolio.html
@@ -13,34 +13,41 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!-- Секция Верхняя линия -->
     <header>
-      <a class="logo" href="#"><span class="logo-web">Web</span>Studio</a>
-      <nav>
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="./index.html">Студия</a>
+      <div class="header contаiner">
+        <a class="logo" href="#"><span class="logo-web">Web</span>Studio</a>
+        <nav>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item current-page">
+              <a href="#">Портфолио</a>
+            </li>
+            <li class="nav-item">
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact-list">
+          <li class="contact-item">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="nav-item current-page">
-            <a href="#">Портфолио</a>
-          </li>
-          <li class="nav-item">
-            <a href="#">Контакты</a>
+          <li class="contact-item">
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="contact-list">
-        <li class="contact-item">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="contact-item">
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- Секция Портфолио -->
