--- a/index.html
+++ b/index.html
@@ -53,147 +53,174 @@
     </header>
     <main>
       <!-- Секция Шапка -->
-      <section class="section-hero">
-        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
-        <button class="bt-hero" type="button">Заказать услугу</button>
+      <section class="section hero">
+        <div class="contаiner">
+          <h1 class="hero-title">
+            Эффективные решения<br />для вашего бизнеса
+          </h1>
+          <button class="bt-hero" type="button">Заказать услугу</button>
+        </div>
       </section>
       <!-- Секция Особенности -->
-      <section>
-        <h2 class="visually-hidden">Особенности</h2>
-        <ul class="feature-list">
-          <li class="feature-item">
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="feature-item">
-            <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="section feature">
+        <div class="contаiner">
+          <h2 class="visually-hidden">Особенности</h2>
+          <ul class="feature-list">
+            <li class="feature-item">
+              <h3>Внимание к деталям</h3>
+              <p>
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3>Пунктуальность</h3>
+              <p>
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3>Планирование</h3>
+              <p>
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3>Современные технологии</h3>
+              <p>
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Секция Чем мы занимаемся -->
-      <section class="doing-section">
-        <h2 class="titles-sections">Чем мы занимаемся</h2>
-        <ul class="doing-list">
-          <li class="doing-item">
-            <img
-              src="./images/html.jpg"
-              alt="Верстка сайтов"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./images/adaptive.jpg"
-              alt="Адаптивная верстка сайтов"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              src="./images/design.jpg"
-              alt="Дизайн сайтов"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="section doing">
+        <div class="contаiner">
+          <h2 class="titles-sections">Чем мы занимаемся</h2>
+          <ul class="doing-list">
+            <li class="doing-item">
+              <img
+                src="./images/html.jpg"
+                alt="Верстка сайтов"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/adaptive.jpg"
+                alt="Адаптивная верстка сайтов"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/design.jpg"
+                alt="Дизайн сайтов"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Секция Наша команда -->
-      <section class="team-section">
-        <h2 class="titles-sections">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./images/igor_dem.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="names">Игорь Демьяненко</h3>
-            <p class="profession">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/olga_rep.jpg"
-              alt="Ольга Репина"
-              width="270"
-              height="260"
-            />
-            <h3 class="names">Ольга Репина</h3>
-            <p class="profession">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/nikolai_tar.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3 class="names">Николай Тарасов</h3>
-            <p class="profession">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/mihail_erm.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              height="260"
-            />
-            <h3 class="names">Михаил Ермаков</h3>
-            <p class="profession">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team">
+        <div class="contаiner">
+          <h2 class="titles-sections">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="cardfoto"
+                src="./images/igor_dem.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <div class="clarification">
+              <h3 class="names">Игорь Демьяненко</h3>
+              <p class="profession">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="cardfoto"
+                src="./images/olga_rep.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
+
+               <div class="clarification">
+              <h3 class="names">Ольга Репина</h3>
+              <p class="profession">Frontend Developer</p>
+            </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="cardfoto"
+                src="./images/nikolai_tar.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <div class="clarification">
+              <h3 class="names">Николай Тарасов</h3>
+              <p class="profession">Marketing</p>
+            </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="cardfoto"
+                src="./images/mihail_erm.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <div class="clarification">
+              <h3 class="names">Михаил Ермаков</h3>
+              <p class="profession">UI Designer</p>
+            </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Секция Подвал -->
     <footer class="footer">
-      <a class="footer-logo" href="#"
-        ><span class="logo-web">Web</span>Studio</a
-      >
-      <address>
-        <ul class="address-list">
-          <li class="address-item">
-            <a
-              class="location"
-              href="https://goo.gl/maps/VrpaVgQh39W8fAb86"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26
-            </a>
-          </li>
-          <li class="address-item">
-            <a class="mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a class="mail" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="contаiner">
+        <a class="footer-logo" href="#">
+          <span class="logo-web">Web</span>Studio
+        </a>
+        <address>
+          <ul class="address-list">
+            <li class="address-item">
+              <a
+                class="location"
+                href="https://goo.gl/maps/VrpaVgQh39W8fAb86"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26
+              </a>
+            </li>
+            <li class="address-item">
+              <a class="mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="mail" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+            </li>
+
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
