--- a/portfolio.html
+++ b/portfolio.html
@@ -186,30 +186,34 @@
     </main>
     <!-- Секция Подвал -->
     <footer class="footer">
-      <a class="footer-logo" href="#"
-        ><span class="logo-web">Web</span>Studio</a
-      >
-      <address>
-        <ul class="address-list">
-          <li class="address-item">
-            <a
-              class="location"
-              href="https://goo.gl/maps/VrpaVgQh39W8fAb86"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26
-            </a>
-          </li>
-          <li class="address-item">
-            <a class="mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a class="mail" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="contаiner">
+        <a class="footer-logo" href="#">
+          <span class="logo-web">Web</span>Studio
+        </a>
+        <address>
+          <ul class="address-list">
+            <li class="address-item">
+              <a
+                class="location"
+                href="https://goo.gl/maps/VrpaVgQh39W8fAb86"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26
+              </a>
+            </li>
+            <li class="address-item">
+              <a class="mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="mail" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+            </li>
+
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
