--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Секция Верхняя линия -->
     <header>
       <div class="header contаiner">
-        <a class="logo" href="#"><span class="logo-web">Web</span>Studio</a>
+        <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
         <nav>
           <ul class="nav-list">
@@ -194,7 +194,7 @@
     <!-- Секция Подвал -->
     <footer class="footer">
       <div class="contаiner">
-        <a class="footer-logo" href="#">
+        <a class="footer-logo" href="./index.html">
           <span class="logo-web">Web</span>Studio
         </a>
         <address>
