--- a/portfolio.html
+++ b/portfolio.html
@@ -25,14 +25,14 @@
     <!-- Секция Верхняя линия -->
     <header>
       <div class="header contаiner">
-        <a class="logo" href="#"><span class="logo-web">Web</span>Studio</a>
+        <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
         <nav>
           <ul class="nav-list">
             <li class="nav-item">
               <a href="./index.html">Студия</a>
             </li>
             <li class="nav-item current-page">
-              <a href="#">Портфолио</a>
+              <a href="./portfolio.html">Портфолио</a>
             </li>
             <li class="nav-item">
               <a href="#">Контакты</a>
@@ -51,7 +51,8 @@
     </header>
     <main>
       <!-- Секция Портфолио -->
-      <section>
+      <section class="section portfolio">
+        <div class="contаiner">
         <h1 class="visually-hidden">Портфолио</h1>
         <!-- Блок Фильтры -->
         <ul class="filters-list">
@@ -81,8 +82,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="name-product">Технокряк</h2>
-              <p class="type-product">Веб-сайт</p>
+              <div class="specification">
+                <h2 class="name-product">Технокряк</h2>
+                <p class="type-product">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="works-item">
@@ -93,8 +96,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="name-product">Постер New Orlean vs Golden Star</h2>
-              <p class="type-product">Дизайн</p>
+              <div class="specification">
+                <h2 class="name-product">Постер New Orlean vs Golden Star</h2>
+                <p class="type-product">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="works-item">
@@ -105,9 +110,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="name-product">Ресторан Seafood</h2>
-              <p class="type-product">Приложение</p>
-            </a>
+              <div class="specification">
+                <h2 class="name-product">Ресторан Seafood</h2>
+                <p class="type-product">Приложение</p>
+              </div>
+          </a>
           </li>
           <li class="works-item">
             <a href="#">
@@ -117,9 +124,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="name-product">Проект Prime</h2>
-              <p class="type-product">Маркетинг</p>
-            </a>
+              <div class="specification">
+                <h2 class="name-product">Проект Prime</h2>
+                <p class="type-product">Маркетинг</p>
+              </div>
+           </a>
           </li>
           <li class="works-item">
             <a href="#">
@@ -129,8 +138,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="name-product">Проект Boxes</h2>
-              <p class="type-product">Приложение</p>
+              <div class="specification">
+                <h2 class="name-product">Проект Boxes</h2>
+                <p class="type-product">Приложение</p>
+              </div>
             </a>
           </li>
           <li class="works-item">
@@ -141,9 +152,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="name-product">Inspiration has no Borders</h2>
-              <p class="type-product">Веб-сайт</p>
-            </a>
+              <div class="specification">
+                <h2 class="name-product">Inspiration has no Borders</h2>
+                <p class="type-product">Веб-сайт</p>
+              </div>
+          </a>
           </li>
           <li class="works-item">
             <a href="#">
@@ -153,9 +166,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="name-product">Издание Limited Edition</h2>
-              <p class="type-product">Дизайн</p>
-            </a>
+              <div class="specification">
+                <h2 class="name-product">Издание Limited Edition</h2>
+                <p class="type-product">Дизайн</p>
+              </div>
+          </a>
           </li>
           <li class="works-item">
             <a href="#">
@@ -165,9 +180,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="name-product">Проект LAB</h2>
-              <p class="type-product">Маркетинг</p>
-            </a>
+              <div class="specification">
+                <h2 class="name-product">Проект LAB</h2>
+                <p class="type-product">Маркетинг</p>
+              </div>
+          </a>
           </li>
           <li class="works-item">
             <a href="#">
@@ -177,17 +194,20 @@
                 width="370"
                 height="294"
               />
-              <h2 class="name-product">Growing Business</h2>
-              <p class="type-product">Приложение</p>
-            </a>
+              <div class="specification">
+                <h2 class="name-product">Growing Business</h2>
+               <p class="type-product">Приложение</p>
+              </div>
+          </a>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <!-- Секция Подвал -->
     <footer class="footer">
       <div class="contаiner">
-        <a class="footer-logo" href="#">
+        <a class="footer-logo" href="./index.html">
           <span class="logo-web">Web</span>Studio
         </a>
         <address>
